# NEAT-survival

./: .gitignore  CMakeLists.txt  NEAT Survival.sln  README.md
NEAT Survival/: Agent.cpp  Agent.h  AgentManager.cpp  AgentManager.h  AgentStats.cpp  AgentStats.h  Camera.cpp  Camera.h  CollisionGrid.cpp  CollisionGrid.h  Connection.cpp  Connection.h  Egg.cpp  Egg.h  Eye.cpp  Eye.h  Font.cpp  Font.h  Food.cpp  Food.h  GameManager.cpp  GameManager.h  GameRules.cpp  GameRules.h  Globals.h  InfoDisplay.cpp  InfoDisplay.h  Mouth.cpp  Mouth.h  NEAT Survival.vcxproj  NEAT Survival.vcxproj.filters  NEAT.cpp  NEAT.h  Node.cpp  Node.h  Object.cpp  Object.h  ObjectSpawnQueue.cpp  ObjectSpawnQueue.h  QuadTree.cpp  (+13 more)
